syntax = "proto3";

message ItemBase
{
	uint64 guid = 1;
	int32 config_id = 2;
	uint64 count = 3;
}